changed form height to fix columns. add CSS to avoid break inside paragraphs. styled form button.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -131,6 +131,9 @@ main {
 .content :first-child {
     margin-top: 0;
 }
+.content p {
+    break-inside: avoid;
+}
 
 @media screen and (min-width: 1000px) {
     
